Bug #9038
fs.d/nfs: this statement may fall through
Start date:
2018-02-05
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Issue found by gcc 7:
mount.c:1980:12: error: this statement may fall through [-Werror=implicit-fallthrough=] fstype = MNTTYPE_NFS3; mount.c:1982:4: note: here default: ^~~~~~~ rmtab.c:374:7: error: this statement may fall through [-Werror=implicit-fallthrough=] if (tmp) { ^ rmtab.c:382:3: note: here default: ^~~~~~~ rpc.rquotad.c:194:3: error: this statement may fall through [-Werror=implicit-fa llthrough=] zexit(1); ^~~~~~~~ rpc.rquotad.c:195:2: note: here default: /* parent */ ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 6685d29894718fc404d81493e41909d6101ea4af
commit 6685d29894718fc404d81493e41909d6101ea4af Author: Toomas Soome <tsoome@me.com> Date: 2018-02-07T20:50:43.000Z 9038 fs.d/nfs: this statement may fall through Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Dan McDonald <danmcd@joyent.com>